add welcome page and styling for all pages